Fix small header on small screens

--- a/styles/faq.css
+++ b/styles/faq.css
@@ -65,6 +65,10 @@
   #faq ul li p{
     font-size: 4vw !important;
   }
+
+  #faq h2{
+    font-size: 6vw !important;
+  }
 }
 
 #faq.enabled{
